[bugfix] Button loading horizontal align

--- a/packages/vant-css/src/button.css
+++ b/packages/vant-css/src/button.css
@@ -69,6 +69,10 @@
   }
 
   &--loading {
+    .van-loading {
+      margin: 0 auto;
+    }
+
     .van-button__text {
       display: none;
     }
